set baseURL in config.yml

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://examplesite.com/"
+baseURL: "https://a199348006.github.io/my-blog/"
 title: Chowder's note
 paginate: 5
 theme: PaperMod
