--- a/config.yml
+++ b/config.yml
@@ -79,7 +79,7 @@ params:
 
     # home-info mode
     homeInfoParams:
-        Title: "Hi there \U0001F44B"
+        Title: A BOLD ATTEMPT IS HALF SUCCESS # "Hi there \U0001F44B"
         Content: Welcome to my blog
 
     socialIcons:
